--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,13 +15,13 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 13.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'kitty'",
+  # "class_g = 'kitty'",
   "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
