--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -216,7 +216,7 @@ opacity-rule = [
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  "100:class_g    = 'Thunderbird'",
 ];
 
 
