--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -273,7 +273,7 @@ blur: {
 blur-background-exclude = [
   #"window_type = 'dock'",
   #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
+  "class_g = 'CrossOver'",
   #
   # prevents picom from blurring the background
   # when taking selection screenshot with `main`
@@ -351,13 +351,15 @@ refresh-rate = 0
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows. paint-on-overlay may make the flickering less obvious.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
 
 # Conditions of windows that shouldn't be considered full-screen for unredirecting screen.
-# unredir-if-possible-exclude = []
+unredir-if-possible-exclude = [
+    "class_g = 'looking-glass-client' && !focused"
+]
 
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
 # in the same group focused at the same time.
