--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -129,15 +129,15 @@ shadow-exclude = [
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.1;
+fade-in-step = 0.028
+# fade-in-step = 0.1;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.1;
+fade-out-step = 0.03
+# fade-out-step = 0.1;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 3
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
@@ -295,7 +295,8 @@ blur-background-exclude = [
 #
 experimental-backends = true;
 backend = "glx";
-#backend = "xrender";
+# backend = "xrender";
+# backend = "xr_glx_hybrid";
 
 
 # Enable/disable VSync.
