--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -300,7 +300,7 @@ backend = "glx";
 
 
 # Enable/disable VSync.
-vsync = true
+vsync = false
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
