--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -64,6 +64,10 @@
     Mod4+space
 """rofi -theme '~/.config/rofi/themes/sed.rasi' -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'"""
     Mod4+c
+"""rofi -show calc -modi calc -no-show-match -no-sort -theme ~/.config/rofi/themes/sed.rasi -calc-command 'echo -n "{result}" | xclip -selection clipboard'"""
+    Mod4+equal
+"rofi-pass"
+    Mod4+p
 
 # Application Bindings
 "kitty"
