--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -150,7 +150,7 @@ cursor_text_color #111111
 : with the background color of the cell underneath instead, use the
 : special keyword: background
 
-cursor_shape beam
+cursor_shape block
 
 : The cursor shape can be one of (block, beam, underline)
 
