--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+include ./themer-dark.conf
+
 : Fonts {{{
 
 : kitty has very powerful font management. You can configure
@@ -18,7 +20,7 @@ bold_font        JetBrains Mono Bold Nerd Font Complete
 italic_font      JetBrains Mono Italic Nerd Font Complete
 bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
 
-font_size 12.0
+font_size 11.0
 
 : Font size (in pts)
 
@@ -587,7 +589,7 @@ window_margin_width 0
 
 : The foreground and background colors
 
- background_opacity 0.6
+ background_opacity 0.75
 
 : The opacity of the background. A number between 0 and 1, where 1 is
 : opaque and 0 is fully transparent.  This will only work if
@@ -652,62 +654,6 @@ window_margin_width 0
 : The 16 terminal colors. There are 8 basic colors, each color has a
 : dull and bright version. You can also set the remaining colors from
 : the 256 color table as color16 to color255.
-
-	color0	#000000
-	color8	#131519
-: black
-
-	color1   #ff4444
-	color9   #ff4444
-: red
-
-	color2   #01fdb0
-	color10  #01fdb0
-: green
-
-	color3   #ffff44
-	color11  #ffff44
-: yellow
-
-	color4  #00a2ff
-	color12 #00a2ff
-: blue
-
-	color5   #ff54c4
-	color13  #ff54c4
-: magenta
-
- color6  #00ffff
- color14 #00ffff
-: cyan
-
- color7  #ffffff
- color15 #ffffff
-: white
-
- mark1_foreground black
-
-: Color for marks of type 1
-
- mark1_background #98d3cb
-
-: Color for marks of type 1 (light steel blue)
-
- mark2_foreground black
-
-: Color for marks of type 2
-
- mark2_background #f2dcd3
-
-: Color for marks of type 1 (beige)
-
- mark3_foreground black
-
-: Color for marks of type 3
-
- mark3_background #f274bc
-
-: Color for marks of type 1 (violet)
 
 : }}}
 
