--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -104,6 +104,7 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
+  "class_g = 'rofi'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
