--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -27,7 +27,8 @@ rounded-corners-exclude = [
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'AltTab'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -217,6 +218,7 @@ opacity-rule = [
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
+  "70:class_g     = 'AltTab'",
 ];
 
 
