--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Kripton
+gtk-theme-name=Kripton-v40
 gtk-icon-theme-name=Pop
 gtk-font-name=JetBrainsMono Nerd Font 11
 gtk-cursor-theme-name=WinSur-dark-cursors
