--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -340,6 +340,7 @@ alias unmark     scout -Mr
 alias search     scout -rs
 alias search_inc scout -rts
 alias travel     scout -aefklst
+alias mkdir      shell mkdir -p
 
 # ===================================================================
 # == Define keys for the browser
