--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -758,3 +758,9 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# Custom keybindings
+#	macos:
+map gm cd /Volumes/
+#	linux:
+# map gm cd /run/media/
