--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -761,6 +761,6 @@ copytmap <ESC> q Q w <C-c>
 
 # Custom keybindings
 #	macos:
-map gm cd /Volumes/
+# map gm cd /Volumes/
 #	linux:
-# map gm cd /run/media/
+map gm cd /run/media/
