--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,12 @@ set-hook -g session-closed  "run ~/.config/tmux/tmux_renumber.sh"
 bind-key x kill-pane
 bind-key & kill-window
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "Config successfully reloaded!"
+bind-key W choose-tree -Zw "swap-window -t '%%'"
+bind-key P choose-tree -Zw "swap-pane -t '%%'"
+bind C-l send-keys 'C-l'
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 set-option -g status-left-length 50
 set-option -g status-right-length 10
@@ -27,3 +33,22 @@ set -g message-style bg='#000000',fg='#FFFFFF'
 setw -g window-status-bell-style bg='#000000',fg='#FFFFFF'
 setw -g window-status-current-format ' #[fg=red,bold][#[fg=color255]#I:#W#[fg=red]]'
 setw -g window-status-format ' #I:#W'
+
+# vim tmux navigation (https://github.com/christoomey/vim-tmux-navigator)
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
