--- a/.config/kitty/themer-dark.conf
+++ b/.config/kitty/themer-dark.conf
@@ -1,10 +1,10 @@
 
-cursor #8c48ff
+cursor #9966ff
 cursor_text_color background
 
 url_color #2392fb
 
-active_border_color #2edc68
+active_border_color #77dd77
 inactive_border_color #242424
 bell_border_color #01fdb0
 
@@ -26,11 +26,11 @@ color8 #6d6d6d
 color1 #ff4444
 color9 #FF6969
 
-color2 #2edc68
-color10 #58E386
+color2 #77dd77
+color10 #92E492
 
-color3 #ffff55
-color11 #FFFF77
+color3 #fefe95
+color11 #FEFEAA
 
 color4 #2392fb
 color12 #4FA8FC
@@ -51,4 +51,4 @@ mark2_foreground #000000
 mark2_background #ff5cc6
 
 mark3_foreground #000000
-mark3_background #ffff55
+mark3_background #fefe95
