--- a/.config/kitty/themer-dark.conf
+++ b/.config/kitty/themer-dark.conf
@@ -4,7 +4,7 @@ cursor_text_color background
 
 url_color #2392fb
 
-active_border_color #77dd77
+active_border_color #50fa7b
 inactive_border_color #242424
 bell_border_color #01fdb0
 
@@ -23,32 +23,32 @@ selection_background #2392fb
 color0 #494949
 color8 #6d6d6d
 
-color1 #ff4444
-color9 #FF6969
+color1 #ff5555
+color9 #FF7777
 
-color2 #77dd77
-color10 #92E492
+color2 #50fa7b
+color10 #73FB95
 
-color3 #fefe95
-color11 #FEFEAA
+color3 #ffff66
+color11 #FFFF85
 
 color4 #2392fb
 color12 #4FA8FC
 
-color5 #ff5cc6
-color13 #FF7DD1
+color5 #ff77cc
+color13 #FF92D6
 
-color6 #7eedf1
-color14 #98F1F4
+color6 #00ffff
+color14 #33FFFF
 
 color7 #dbdbdb
 color15 #ffffff
 
 mark1_foreground #000000
-mark1_background #7eedf1
+mark1_background #00ffff
 
 mark2_foreground #000000
-mark2_background #ff5cc6
+mark2_background #ff77cc
 
 mark3_foreground #000000
-mark3_background #fefe95
+mark3_background #ffff66
