--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./themer-dark.conf
+include ~/.config/kitty/sed.conf
 
 font_family      JetBrainsMono Nerd Font Mono
 bold_font        auto
@@ -103,7 +103,7 @@ tab_fade 0.25 0.5 0.75 1
 tab_title_template "{index}:{title}"
 active_tab_title_template none
 
-background_opacity 0.85
+background_opacity 0
 
 background_image none
 
