--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -49,18 +49,18 @@ shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .5
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -12;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -12;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -87,7 +87,7 @@ shadow-offset-y = -7;
 # Deprecated, use 
 #   shadow-exclude = 'bounding_shaped'
 # or 
-#   shadow-exclude = 'bounding_shaped && !rounded_corners'
+  # shadow-exclude = 'bounding_shaped && !rounded_corners'
 # instead.
 #
 # shadow-ignore-shaped = ''
@@ -508,7 +508,7 @@ log-level = "info";
 wintypes:
 {
   normal = { fade = true; shadow = false; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1.0; }
