--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 set -g history-limit 10000
 set -g default-terminal "screen-256color"
+set-option -sg escape-time 10
 set-option -gw xterm-keys on
+set-option -g focus-events on
 set-option -g renumber-windows on
 set-option -g status-keys vi
 set-option -g automatic-rename on
