last minute fuckups

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Kripton-v40
 gtk-icon-theme-name=Pop
-gtk-font-name=JetBrainsMono Nerd Font 11
+gtk-font-name=JetBrainsMono Nerd Font Mono 11
 gtk-cursor-theme-name=WinSur-dark-cursors
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
