--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,8 +33,8 @@ set -g pane-active-border-style fg='#01FDB0'
 set -g pane-border-style fg='#FFFFFF'
 set -g message-style bg='#000000',fg='#FFFFFF'
 setw -g window-status-bell-style bg='#000000',fg='#FFFFFF'
-setw -g window-status-current-format ' #[fg=red,bold][#[fg=color255]#I:#W#[fg=red]]'
-setw -g window-status-format ' #I:#W'
+setw -g window-status-current-format ' #[fg=red,bold][#[fg=color255]#I:#W#[fg=red]] '
+setw -g window-status-format '#[fg=color8][#[fg=color255]#I:#W#[fg=color8]]'
 
 # vim tmux navigation (https://github.com/christoomey/vim-tmux-navigator)
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
