--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-include ~/.config/kitty/sed.conf
+include ~/.config/kitty/tokyonight.conf
 
-font_family      JetBrainsMono Nerd Font Mono
+font_family      Iosevka Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -76,7 +76,7 @@ window_border_width 1.0
 draw_minimal_borders yes
 window_margin_width 0
 single_window_margin_width -1
-window_padding_width 0
+window_padding_width 1.0
 
 placement_strategy center
 
