--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 include ~/.config/kitty/tokyonight.conf
 
-font_family      Iosevka Nerd Font Mono
+font_family      JetBrainsMono Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
