--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = git@github.com:s3dman/nvim.git
+[submodule ".scripts"]
+	path = .scripts
+	url = git@github.com:s3dman/scripts.git
