--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -451,12 +451,12 @@ map )     jump_non
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
+map gd cd ~/Downloads
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
-map gm cd /media
+map gm cd /run/media/neville/sed/NEVILLE
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
 map gM cd /mnt
 map gs cd /srv
@@ -758,9 +758,3 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-
-# Custom keybindings
-#	macos:
-# map gm cd /Volumes/
-#	linux:
-map gm cd /run/media/neville/
