fixed autolocking and lockscreen stuff

--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -2,7 +2,7 @@
 contrastOpacity=188
 contrastUiColor=#ffffff
 disabledTrayIcon=true
-drawColor=#8b8b8b
+drawColor=#800000
 drawFontSize=1
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
