--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = NevilleJS
-	email = nevillejs24@gmail.com
+	email = 69287021+s3dman@users.noreply.github.com 
 [diff]
 	tool = vimdiff
 [merge]
