--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,8 +9,8 @@ set-option -g automatic-rename on
 set-option -g status-interval 1
 set-window-option -g mode-keys vi
 
-set-hook -g session-created "run ~/.config/tmux/tmux_renumber.sh"
-set-hook -g session-closed  "run ~/.config/tmux/tmux_renumber.sh"
+# set-hook -g session-created "run ~/.config/tmux/tmux_renumber.sh"
+# set-hook -g session-closed  "run ~/.config/tmux/tmux_renumber.sh"
 
 bind-key x kill-pane
 bind-key & kill-window
