--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -2,8 +2,8 @@
 contrastOpacity=188
 contrastUiColor=#ffffff
 disabledTrayIcon=true
-drawColor=#800000
-drawFontSize=1
+drawColor=#fff6f6
+drawFontSize=5
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
 savePath=/home/neville/Downloads
