xsecurelock incompatible compositor issue fix temp

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -144,7 +144,9 @@ fade-delta = 1
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
 fade-exclude = [
-  "class_g = 'slop'"   # maim
+  "class_g = 'slop'",
+  "class_g = 'xsecurelock'"
+
 ]
 
 # Do not fade on window open/close.
