--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -2,7 +2,7 @@
 contrastOpacity=188
 contrastUiColor=#ffffff
 disabledTrayIcon=true
-drawColor=#fff6f6
+drawColor=#585858
 drawFontSize=5
 drawThickness=3
 ignoreUpdateToVersion=11.0.0
