--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -44,14 +44,13 @@ separator = |
 separator-foreground = ${colors.background-alt}
 font-0 = JetBrainsMono Nerd Font:style=Medium:size=10;2
 modules-left = xworkspaces xwindow
-modules-right = blank pulseaudio memory cpu date
+modules-right = blank pulseaudio memory cpu date powerbutton
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-; tray-position = right
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
+tray-position = center
+tray-offset-x = 19.2%
+wm-restack = bspwm
 ; override-redirect = true
 
 [module/xworkspaces]
@@ -63,7 +62,7 @@ label-active-padding = 1
 label-occupied = 
 label-occupied-padding = 1
 label-urgent = 
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.alert} 
 label-urgent-padding = 1
 label-empty = 
 label-empty-foreground = ${colors.background-alt}
@@ -71,12 +70,11 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:100:...%
 
 [module/blank]
 type = custom/text
 content = " "
-
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -84,10 +82,9 @@ format-volume-prefix = "  "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 label-volume = %percentage%%
-label-muted = ﱝ
+label-muted = "ﱝ   0%"
 label-muted-foreground = ${colors.alert}
 click-right = "kitty pulsemixer"
-
 
 [module/memory]
 type = internal/memory
@@ -106,10 +103,16 @@ label = %percentage:2%%
 [module/date]
 type = internal/date
 interval = 1
-date = %Y-%m-%d - %H:%M:%S
-date-alt = %A %B %d - %H:%M:%S
+date = %A - %Y-%m-%d - %H:%M:%S
 label = %date%
 label-foreground = ${colors.foreground}
+
+[module/powerbutton]
+type = custom/text
+content = "⏻"
+content-padding = 0
+content-foreground = ${colors.alert}
+click-left = "$HOME/.scripts/powermenu"
 
 [settings]
 screenchange-reload = true
