--- a/.config/misc_configs/etc/pacman.conf
+++ b/.config/misc_configs/etc/pacman.conf
@@ -23,7 +23,6 @@ Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
-IgnorePkg = freetype2
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -32,10 +31,11 @@ IgnorePkg = freetype2
 # Misc options
 #UseSyslog
 Color
-#TotalDownload
+#NoProgressBar
 CheckSpace
 VerbosePkgLists
 ILoveCandy
+#ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
