--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -44,12 +44,12 @@ separator = |
 separator-foreground = ${colors.background-alt}
 font-0 = JetBrainsMono Nerd Font:style=Medium:size=10;2
 modules-left = xworkspaces xwindow
-modules-right = blank pulseaudio memory cpu date powerbutton
+modules-right = blank pulseaudio memory cpu battery date powerbutton 
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
 tray-position = center
-tray-offset-x = 19.2%
+tray-offset-x = 15%
 wm-restack = bspwm
 ; override-redirect = true
 
@@ -79,7 +79,7 @@ content = " "
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.primary}
+; format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 label-volume = %percentage%%
 label-muted = "ﱝ   0%"
@@ -90,22 +90,34 @@ click-right = "kitty pulsemixer"
 type = internal/memory
 interval = 2
 format-prefix = "  "
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 label = %mb_used%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+
+[module/battery]
+type = internal/battery
+full-at = 99
+low-at = 5
+battery = BAT0
+adapter = ADP1
+roll-interval = 5
+label-charging =  %percentage%%
+label-discharging =  %percentage%%
+label-full = 
+label-low = 
 
 [module/date]
 type = internal/date
 interval = 1
 date = %A - %Y-%m-%d - %H:%M:%S
 label = %date%
-label-foreground = ${colors.foreground}
+; label-foreground = ${colors.foreground}
 
 [module/powerbutton]
 type = custom/text
