--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,7 +49,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
 tray-position = center
-tray-offset-x = 15%
+tray-offset-x = 14.5%
 wm-restack = bspwm
 ; override-redirect = true
 
@@ -109,8 +109,8 @@ adapter = ADP1
 roll-interval = 5
 label-charging =  %percentage%%
 label-discharging =  %percentage%%
-label-full = 
-label-low = 
+label-full =  %percentage%%
+label-low =  %percentage%%
 
 [module/date]
 type = internal/date
